--- a/styles/forms.css
+++ b/styles/forms.css
@@ -12,7 +12,7 @@ fieldset {
 }
 
 legend {
-  font: 700 1.125rem/1.25rem "Baloo 2", sans-serif;
+  font: 700 1.125rem "Baloo 2", sans-serif;
   margin-bottom: 1.5rem;
 
   display: flex;
