Checkbox de estilo finalizada

--- a/styles/global.css
+++ b/styles/global.css
@@ -59,3 +59,13 @@ img {
   max-width: 100%;
   height: auto;
 }
+
+.flex {
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+}
+
+.flex-1 {
+  flex: 1;
+}
