--- a/styles/global.css
+++ b/styles/global.css
@@ -76,3 +76,10 @@ img {
   row-gap: 1rem;
   column-gap: 2rem;
 }
+
+.divider {
+  width: 100%;
+  margin-block: 3rem 2.5rem;
+
+  border-bottom: 1px solid var(--input-stroke);
+}
